<resources>
    <string name="app_name">MyEmotions</string>
    <string name="welcome_screen_greet_text">Добро\nпожаловать</string>
    <string name="google_enter_button_text">Войти через Google</string>
    <string name="per_day">в день:</string>
    <string name="streak">серия:</string>
    <string name="journal_label">Журнал</string>
    <string name="statistics_label">Статистика</string>
    <string name="settings_label">Настройки</string>
    <string name="journal_title">Что вы сейчас\nчувствуете?</string>
    <string name="card_title">Я чувствую</string>
    <string name="stat_general_title">Эмоции\nпо категориям</string>
    <string name="week_stat_title">Эмоции\nпо дням недели</string>
    <string name="first_day">Понедельник</string>
    <string name="second_day">Вторник</string>
    <string name="third_day">Среда</string>
    <string name="fourth_day">Четверг</string>
    <string name="fifth_day">Пятница</string>
    <string name="sixth_day">Суббота</string>
    <string name="seventh_day">Воскресенье</string>
    <string name="settings_title">Настройки</string>
    <string name="send_notifications">Присылать напоминания</string>
    <string name="add_notification">Добавить напоминание</string>
    <string name="signout">Выйти из аккаунта</string>
    <string name="enter_fingerprint">Вход по отпечатку пальца</string>
    <string name="bottom_sheet_title">Напоминание</string>
    <string name="hours_desc">Часы</string>
    <string name="mins_desc">Минуты</string>
    <string name="save_btn_bottom_sheet">Сохранить</string>
    <string name="often_stat_title">Самые частые\nэмоции</string>
    <string name="stat_suring_day_title">Ваше настроение\nв течение дня</string>
    <string name="early_morning">Раннее\nутро</string>
    <string name="morning">Утро</string>
    <string name="afternoon">День</string>
    <string name="evening">Вечер</string>
    <string name="late_evening">Поздний\nвечер</string>
    <string name="base_add_note_text">Выберите эмоцию, лучше всего\nописывающую, что вы сейчас чувствуете</string>
    <string name="note_details_title">Запись</string>
    <string name="save_btn_text">Сохранить</string>
    <string name="note_Activity_title">Чем вы занимались?</string>
    <string name="human_title">С кем вы были?</string>
    <string name="place_title">Где вы были?</string>
    <string name="rage_title">Ярость</string>
    <string name="rage_description">чувство, вызванное несправедливостью или разочарованием</string>
    <string name="stress_title">Напряжение</string>
    <string name="stress_description">состояние внутреннего стресса и готовности к действию</string>
    <string name="excitement_title">Возбуждение</string>
    <string name="excitement_description">чувство сильного интереса и активности</string>
    <string name="delight_title">Восторг</string>
    <string name="delight_description">чувство огромного удовольствия и радости</string>
    <string name="envy_title">Зависть</string>
    <string name="envy_description">ощущение желания того, что есть у другого, и неудовлетворенности от этого</string>
    <string name="burnout_title">Выгорание</string>
    <string name="burnout_description">эмоциональное истощение от постоянного стресса или перегрузки</string>
    <string name="anxiety_title">Беспокойство</string>
    <string name="anxiety_description">чувство тревоги и волнения о том, что может произойти в будущем</string>
    <string name="tiredness_title">Усталость</string>
    <string name="tiredness_description">ощущение, что необходимо отдохнуть, когда энергия на исходе</string>
    <string name="satisfaction_title">Удовлетворённость</string>
    <string name="satisfaction_description">чувство довольства от того, что все в жизни устроено так, как хотелось бы</string>
    <string name="gratitude_title">Благодарность</string>
    <string name="gratitude_description">чувство признательности за то, что есть, за то, что дарует жизнь</string>
    <string name="apathy_title">Апатия</string>
    <string name="apathy_description">полное отсутствие интереса к жизни и окружающим</string>
    <string name="depression_title">Депрессия</string>
    <string name="depression_description">чувство безысходности и апатии</string>
    <string name="confidence_title">Уверенность</string>
    <string name="confidence_description">внутреннее ощущение силы и веры в свои способности и возможности</string>
    <string name="happiness_title">Счастье</string>
    <string name="happiness_description">состояние радости и удовлетворения от жизни, от того, что все идет хорошо</string>
    <string name="calmness_title">Спокойствие</string>
    <string name="calmness_description">ощущение внутреннего мира и гармонии, когда ничего не тревожит</string>
    <string name="security_title">Защищённость</string>
    <string name="security_description">ощущение безопасности, когда ничего не угрожает</string>
    <string name="add_note_button_text">Добавить запись</string>

    <string name="server_client_id">891824277797-l3o42dda5t618mrssjg01kaq2c9dch87.apps.googleusercontent.com</string>

    <plurals name="days">
        <item quantity="one">%d день</item>
        <item quantity="few">%d дня</item>
        <item quantity="many">%d дней</item>
        <item quantity="other">%d дней</item>
    </plurals>

    <plurals name="records">
        <item quantity="one">%d запись</item>
        <item quantity="few">%d записи</item>
        <item quantity="many">%d записей</item>
        <item quantity="other">%d записей</item>
    </plurals>

    <string name="today">сегодня, %s</string>
    <string name="yesterday">вчера, %s</string>
    <string name="monday">понедельник, %s</string>
    <string name="tuesday">вторник, %s</string>
    <string name="wednesday">среда, %s</string>
    <string name="thursday">четверг, %s</string>
    <string name="friday">пятница, %s</string>
    <string name="saturday">суббота, %s</string>
    <string name="sunday">воскресенье, %s</string>
    <string name="notification_title">Сделайте запись</string>
    <string name="notification_description">Что вы сейчас чувствуете?</string>

    <string-array name="activity_chips">
        <item>Приём пищи</item>
        <item>Встреча с друзьями</item>
        <item>Тренировка</item>
        <item>Хобби</item>
        <item>Отдых</item>
        <item>Поездка</item>
    </string-array>

    <string-array name="human_chips">
        <item>Один</item>
        <item>Друзья</item>
        <item>Семья</item>
        <item>Коллеги</item>
        <item>Партнёр</item>
        <item>Питомцы</item>
    </string-array>

    <string-array name="place_chips">
        <item>Дом</item>
        <item>Работа</item>
        <item>Школа</item>
        <item>Транспорт</item>
        <item>Улица</item>
    </string-array>
</resources>