<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_form"
    android:orientation="vertical"
    android:paddingHorizontal="24dp">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_sheet_title"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:fontFamily="@font/gwen_trial_regular"
        android:layout_gravity="left"
        android:layout_marginBottom="24dp" />

    <LinearLayout
        android:id="@+id/time_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="top"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/number_picker_back"
                android:fontFamily="@font/velasans_bold"
                android:text="20"
                android:textColor="@color/black"
                android:textSize="45sp"
                android:textAlignment="center"
                android:paddingVertical="10dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours_desc"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/velasans_regular"/>
        </LinearLayout>

        <TextView
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center_horizontal"
            android:text=":"
            android:textColor="@color/white"
            android:textSize="57sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/minutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/number_picker_back"
                android:fontFamily="@font/velasans_bold"
                android:text="00"
                android:textColor="@color/black"
                android:textSize="45sp"
                android:textAlignment="center"
                android:paddingVertical="10dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mins_desc"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/velasans_regular"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveBtn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/save_btn_bottom_sheet"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:fontFamily="@font/velasans_medium"
        android:textSize="16sp"
        android:paddingVertical="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp">

    </androidx.appcompat.widget.AppCompatButton>
</LinearLayout>