<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/greet_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/settings_title"
        android:fontFamily="@font/gwen_trial_regular"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greet_text">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:src="@drawable/avatar_placeholder"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/velasans_bold"
            android:text="Иван Иванов"
            android:textColor="@color/white"
            android:textSize="24sp"></TextView>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:fillViewport="true"
        android:scrollbars="none"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_notification">
                </ImageView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/velasans_medium"
                    android:text="@string/send_notifications"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp">

                </TextView>

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    app:thumbTint="@color/switch_button_thumb_selector"
                    app:trackTint="@color/switch_button_back_drawable">

                </com.google.android.material.materialswitch.MaterialSwitch>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="16dp"
                android:id="@+id/notifications_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/add_notification"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/label_shape"
                android:backgroundTint="@color/white"
                android:paddingVertical="16dp"
                android:text="@string/add_notification"
                android:textColor="@color/black"
                android:fontFamily="@font/velasans_medium"
                android:textSize="16sp"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fingerprint">
                </ImageView>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/velasans_medium"
                    android:text="@string/enter_fingerprint"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp">

                </TextView>

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    app:thumbTint="@color/switch_button_thumb_selector"
                    app:trackTint="@color/switch_button_back_drawable">

                </com.google.android.material.materialswitch.MaterialSwitch>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>