<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/gwen_trial_regular"
        android:text="@string/stat_suring_day_title"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:weightSum="5">

        <LinearLayout
            android:weightSum="1"
            android:id="@+id/early_morning_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/empty_vertical_stat"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                tools:ignore="DuplicateIds">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/early_morning"
                    android:textAlignment="center"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/velasans_regular">
                </TextView>
                <TextView
                    android:id="@+id/early_morning_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="#999999"
                    android:textSize="12sp"
                    android:fontFamily="@font/velasans_regular">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/morning_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:orientation="vertical"
            android:layout_marginLeft="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/empty_vertical_stat"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                tools:ignore="DuplicateIds">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/morning"
                    android:textAlignment="center"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/velasans_regular">
                </TextView>
                <TextView
                    android:id="@+id/morning_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="#999999"
                    android:textSize="12sp"
                    android:fontFamily="@font/velasans_regular">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/afternoon_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:weightSum="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/empty_vertical_stat"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                tools:ignore="DuplicateIds">
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/afternoon"
                    android:textAlignment="center"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/velasans_regular">
                </TextView>
                <TextView
                    android:id="@+id/afternoon_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="#999999"
                    android:textSize="12sp"
                    android:fontFamily="@font/velasans_regular">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/evening_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="8dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/empty_vertical_stat"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                tools:ignore="DuplicateIds">
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/evening"
                    android:textAlignment="center"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/velasans_regular">
                </TextView>
                <TextView
                    android:id="@+id/evening_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="#999999"
                    android:textSize="12sp"
                    android:fontFamily="@font/velasans_regular">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/late_evening_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:weightSum="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/empty_vertical_stat"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                tools:ignore="DuplicateIds">

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/late_evening"
                    android:textAlignment="center"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/velasans_regular">
                </TextView>
                <TextView
                    android:id="@+id/late_evening_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="#999999"
                    android:textSize="12sp"
                    android:fontFamily="@font/velasans_regular">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>